Se añade el controlador global de errores.